# PyThermoDB-Settings

./: .gitignore  README.md  pyproject.toml
examples/: component-exp-1.py  component-exp-2.py  doc1.py  fun1.py  mixture-1.py  models-exp-1.py  ref-extractor-1.py  ref-extractor-2.py  ref-extractor-3.py  ref-extractor.py
pythermodb_settings/configs/: __init__.py  about.py
pythermodb_settings/models/: __init__.py  components.py  conditions.py  configs.py  references.py  rules.py  source.py
pythermodb_settings/references/: __init__.py  component_extractor.py  main.py  yaml_extractor.py
pythermodb_settings/utils/: __init__.py  component_utils.py  opt_tools.py  tools.py
