[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pythermodb-settings"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sina Gilassi", email = "sina.gilassi@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]

[project.urls]
"Homepage" = "https://github.com/sinagilassi/PyThermoDB-Settings"
"Tracker" = "https://github.com/sinagilassi/PyThermoDB-Settings/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pythermodb_settings*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.setuptools.package-data]
"pythermodb_settings" = ["data/**/*"]
